2002-09-10 21:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTWindowBuffer.h, Source/art/ARTWindowBuffer.m,
	Source/x11/XWindowBuffer.m, Headers/x11/XWindowBuffer.h: Rename
	ARTWindowBuffer to XWindowBuffer and move it to x11/ so other
	backends can use it. Update many files in Source/art/.

2002-09-10 17:35  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/composite.m: Implement handling of tranformations and
	clipping.

2002-09-08  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer
	-_XWinFrameToOSWinFrame:for:]): New.
	([XGServer -_addExposedRectangle::]): Convert rect to OS coords.
	([XGServer -_processExposedRectangles:]): Invalidate exposed
	rects in view. (patch from Frederic De Jaeger).

2002-09-06  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSContext.m (-initWithContextInfo:): Fix
	for GSStreamContext subclass.
	* Source/GSStreamGState.m: New file.
	* Source/GSStreamContext.m: Make a subclass of GSContext.
	Call superclass implementation where appropriate.

	* Source/GSStreamContext.m: Fix for 'show'ing parenthesis
	characters (patch from Stefan Urbanek).
	
2002-09-01  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.1

2002-09-01 12:58  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m ([ARTGState -GSCurrentDevice:::]): Check
	for NULL pointers before setting values.

2002-08-31 19:54  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/path.m (DPSrectfill::::): Calculate alpha pointer
	correctly when clipped.

	* Source/art/composite.m (-compositeGState:fromRect:toPoint:op:):
	Fix detection of horizontal-only overlap (order==2), and handling
	it in the general case.

	* Source/blit.m: Whitespace cleanups.

2002-08-31 15:52  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m: Implement clipping of images using the
	clipping spans.

2002-08-31 14:40  Alexander Malmberg  <alexander@malmberg.org>
